src/manifest/tests/snapshots/unnix__manifest__tests__cache_no_default.snap
---
source: src/manifest/tests/mod.rs
expression: "manifest!(\"cache-no-default.kdl\")"
---
Manifest {
    systems: {
        System {
            arch: X86_64,
            kernel: Linux,
        }: SystemManifest {
            packages: {},
            env: {},
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "nix-community.cachix.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "nix-community.cachix.org-1",
                    key: mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=,
                },
            ],
        },
    },
}
