src/manifest/tests/snapshots/unnix__manifest__tests__hydra.snap
---
source: src/manifest/tests/mod.rs
expression: "manifest!(\"hydra.kdl\")"
---
Manifest {
    systems: {
        System {
            arch: Aarch64,
            kernel: Darwin,
        }: SystemManifest {
            packages: {
                "a": Package {
                    package: "a",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "d",
                            project: "e",
                            jobset: "f",
                            job: "{package}.{system}",
                        },
                    ),
                },
                "b": Package {
                    package: "b",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "g",
                            project: "h",
                            jobset: "i",
                            job: "j",
                        },
                    ),
                },
            },
            env: {},
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "cache.nixos.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "cache.nixos.org-1",
                    key: 6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=,
                },
            ],
        },
        System {
            arch: Aarch64,
            kernel: Linux,
        }: SystemManifest {
            packages: {
                "a": Package {
                    package: "a",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "d",
                            project: "e",
                            jobset: "f",
                            job: "{package}.{system}",
                        },
                    ),
                },
                "b": Package {
                    package: "b",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "g",
                            project: "h",
                            jobset: "i",
                            job: "j",
                        },
                    ),
                },
            },
            env: {},
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "cache.nixos.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "cache.nixos.org-1",
                    key: 6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=,
                },
            ],
        },
        System {
            arch: X86_64,
            kernel: Linux,
        }: SystemManifest {
            packages: {
                "a": Package {
                    package: "a",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "d",
                            project: "e",
                            jobset: "f",
                            job: "{package}.{system}",
                        },
                    ),
                },
                "b": Package {
                    package: "b",
                    outputs: {},
                    resolver: Hydra(
                        HydraResolver {
                            base: "g",
                            project: "h",
                            jobset: "i",
                            job: "j",
                        },
                    ),
                },
            },
            env: {},
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "cache.nixos.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "cache.nixos.org-1",
                    key: 6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=,
                },
            ],
        },
    },
}
